// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Number should render 1`] = `
<div>
  <div
    class="input default left"
  >
    <input
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`Number should render when disabled 1`] = `
<div>
  <div
    class="input default left disabled"
  >
    <input
      disabled=""
      type="number"
      value="8"
    />
  </div>
</div>
`;
